# plathon

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
notebooks/: hello_world.ipynb  hello_world.py
plathon/: hello_world.py
tests/: hello_world_test.py
